@@ -28,21 +28,25 @@ var CloudCommander, $;
         
         Util.jsload('lib/client/socket.js');
         
-        var lLoadTerm_func = function(){
+        var lLoadTerm_func = function(){            
             Util.jsload('lib/client/terminal/jquery-terminal/jquery.terminal.js',
                 function(){
                     init();
-                    
+                                        
                     $(function($, undefined) {
-                        Term = JqueryTerminal.Term = $('#terminal').terminal(function(command, term){
+                        Term = JqueryTerminal.Term = $('#terminal').terminal(function(command, term){                        
                             term.echo('');
                             cloudcmd.Socket.send(command);
                         }, {
-                            greetings   : 'Javascript Interpreter',
-                            prompt      : 'cloudcmd> '
+                            greetings   : '[[;#729FCF;]Cloud Commander Terminal]',
+                            prompt      : '[[;#729FCF;]cloudcmd> ]',
+                            color       : '#729FCF;'
                         });
                     });
-                                        
+                    /* removing resize function, no need for us */
+                    Term.resize = function(){};
+                    $(window).unbind('resize');
+                    
                     JqueryTerminal.show();
                 });
         };
