@@ -26,7 +26,10 @@
     font-family: FreeMono, monospace;
     color: #aaa;
     background-color: #000;
-    line-height: 14px;
+    line-height: 16px;
+    /* removing breaking the lines */
+    white-space: nowrap;
+    overflow:hidden;
 }
 .terminal .cmd span {
     float: left;
